git-svn-id: svn://192.168.1.10/public/CoffeeMud@7673 0d6f1817-ed0e-0410-87c9-987e46238f29